# noip-duc

./: .dockerignore  .gitignore  .mise.toml  CHANGELOG.md  Cargo.toml  INSTALL.md  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: buddy.yml  ci.yml  codeql.yml  official.yml
docker/azurelinux/: Dockerfile
docker/debian/: Dockerfile
src/: control.rs  dns_method.rs  lib.rs  main.rs  noip2.rs  observer.rs  public_ip.rs  update.rs
