[package]
name = "noip-duc"
version = "3.4.0-hcoona.1"
authors = ["No-IP Team <support@noip.com>"]
description = "No-IP Dynamic Update Client (https://www.noip.com)"
license = "Apache-2.0"
homepage = "https://www.noip.com"
edition = "2021"

[[bin]]
name = "noip-duc"
path = "src/bin/main.rs"

[lib]
name = "noip_duc"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
async-trait = "^0.1"
base64 = "^0.22"
byteorder = "^1.5"
# disable default features to remove dependency on `atty`/terminal detection brought in by color.
clap = { version = "^4", default-features = false, features = ["derive", "env", "cargo", "std", "help", "usage", "error-context", "suggestions"] }
env_logger = "^0.11"
form_urlencoded = "^1"
humantime = "^2"
log = "^0.4"
percent-encoding = "^2"
reqwest = { version = "^0.12", default-features = false, features = ["rustls-tls", "http2"] }
thiserror = "1.0"
# Renamed upstream: trust-dns-resolver >=0.24 moved to Hickory DNS and crate renamed to hickory-resolver.
# See: https://github.com/hickory-dns/hickory-dns
hickory-resolver = "^0.24"
tokio-util = "^0.7"
url = "^2.5"
# Explicitly add tokio (needs >=1.44.2 to address GHSA-rr8g-9fpq-6wmg)
tokio = { version = "=1.48.0", features = ["rt-multi-thread", "macros", "time", "net", "process", "signal"] }

[dependencies.rustls]
version = "0.23"
features = ["logging"]

[target.'cfg(unix)'.dependencies]
daemonize = "^0.5"
nix = { version = "^0.30", default-features = false, features = ["signal"] }

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = 'z'
panic = 'abort'

[package.metadata.deb]
section = "net"
maintainer-scripts = "debian/"
systemd-units = { enable = false }
depends = ""
revision = ""
